Fixed broken half and full-bleed images on News Articles

--- a/docroot/themes/custom/ucsf/assets/css/style.css
+++ b/docroot/themes/custom/ucsf/assets/css/style.css
@@ -5964,7 +5964,7 @@ figure.half-image-left-full {
 figure.align-right,
 figure.align-left,
 figure.align-center,
-figure.embedded-entity {
+figure[class="embedded-entity"] {
   margin: 40px;
   margin-top: 0;
   margin-bottom: 32px;
@@ -5972,7 +5972,7 @@ figure.embedded-entity {
   figure.align-right figcaption,
   figure.align-left figcaption,
   figure.align-center figcaption,
-  figure.embedded-entity figcaption {
+  figure[class="embedded-entity"] figcaption {
     display: table-caption;
     caption-side: bottom; }
 
@@ -5983,11 +5983,11 @@ figure.align-left {
   margin-left: 0; }
 
 figure.align-center,
-figure.embedded-entity {
+figure[class="embedded-entity"] {
   margin-left: 0;
   margin-right: 0; }
 
-figure figure.embedded-entity {
+figure figure[class="embedded-entity"] {
   margin: 0; }
 
 .video.article-full-width {
