--- a/docroot/themes/custom/ucsf/scss/node/_node-article.scss
+++ b/docroot/themes/custom/ucsf/scss/node/_node-article.scss
@@ -232,7 +232,7 @@ figure.half-image-left-full {
 figure.align-right,
 figure.align-left,
 figure.align-center,
-figure.embedded-entity {
+figure[class="embedded-entity"] {
   margin: $space-five;
   margin-top: 0;
   margin-bottom: $space-quadruple;
@@ -253,13 +253,13 @@ figure.align-left {
 }
 
 figure.align-center,
-figure.embedded-entity {
+figure[class="embedded-entity"] {
   margin-left: 0;
   margin-right: 0;
 }
 
-figure figure.embedded-entity {
-  margin: 0; 
+figure figure[class="embedded-entity"] {
+  margin: 0;
 }
 
 .video.article-full-width {
